--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,42 @@
-name: Fetch V2Ray Configs
+name: Manual or Push Trigger Build
 
 on:
-  schedule:
-    - cron: '*/30 * * * *'
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  build:
+  build-and-commit:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9'
+
+      # این مرحله کلیدی اضافه شده است
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install -r requirements.txt
+
       - name: Run scraper script
         run: python scraper.py
-      - name: Commit and push if changed
+        env:
+          # مطمئن شوید تمام سکرت‌های شما در بخش Secrets ریپازیتوری تعریف شده‌اند
+          GH_PAT: ${{ secrets.GH_PAT }}
+          GITLAB_API_TOKEN: ${{ secrets.GITLAB_API_TOKEN }}
+          GITLAB_SNIPPET_ID: ${{ secrets.GITLAB_SNIPPET_ID }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
+
+      - name: Commit and push changes
         run: |
-          git config --global user.name 'GitHub Actions Bot'
-          git config --global user.email 'actions@github.com'
-          git add configs.json
-          git diff-index --quiet HEAD || git commit -m "Update configs" && git push
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Update config files" -a || echo "No changes to commit"
+          git push
