--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,32 +1,40 @@
-name: Scrape V2Ray Configs
+name: Scheduled Scrape
+
 on:
   schedule:
+    # این دستور هر ۴ ساعت یک بار اجرا می‌شود
     - cron: '0 */4 * * *'
-  workflow_dispatch:
+
 jobs:
-  scrape:
+  build-and-commit:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.9'
+
       - name: Install dependencies
-        run: pip install requests supabase
-      - name: Run scraper
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run scraper script
+        run: python scraper.py
         env:
+          GH_PAT: ${{ secrets.GH_PAT }}
           GITLAB_API_TOKEN: ${{ secrets.GITLAB_API_TOKEN }}
           GITLAB_SNIPPET_ID: ${{ secrets.GITLAB_SNIPPET_ID }}
-          GH_PAT: ${{ secrets.GH_PAT }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
-        run: python scraper.py
-      - name: Commit and push if changed
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "chore: Update configs.txt"
-          file_pattern: configs.txt
+          
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Update config files" -a || echo "No changes to commit"
+          git push
