--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -2,7 +2,6 @@ name: Scheduled Scrape
 
 on:
   schedule:
-    # این دستور هر ۴ ساعت یک بار اجرا می‌شود
     - cron: '0 */4 * * *'
 
 jobs:
@@ -15,7 +14,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          # نسخه پایتون به 3.11 آپدیت شد
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
