--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
+
+    # این بخش برای دادن مجوز اضافه شده است
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -14,7 +19,6 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          # نسخه پایتون به 3.11 آپدیت شد
           python-version: '3.11'
 
       - name: Install dependencies
