--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
-    
-    # این بخش برای دادن مجوز اضافه شده است
     permissions:
       contents: write
 
@@ -40,6 +38,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
+          git pull --rebase # این خط برای جلوگیری از خطای reject اضافه شد
           git add .
           git commit -m "Update config files" -a || echo "No changes to commit"
           git push
