--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -39,5 +39,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git add .
           git commit -m "Update config files" -a || echo "No changes to commit"
-          git pull --rebase # <<<<<<< به بعد از کامیت منتقل شد
-          git push
+          # از Force Push برای جلوگیری از تداخل و بازنویسی استفاده می‌شود
+          git push --force
