--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -7,8 +7,11 @@ on:
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
+
+    # این بخش برای دادن تمام مجوزهای لازم آپدیت شد
     permissions:
       contents: write
+      workflows: write
       
     steps:
       - name: Checkout repository
@@ -39,5 +42,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add .
           git commit -m "Update config files" -a || echo "No changes to commit"
-          # از Force Push برای جلوگیری از تداخل و بازنویسی استفاده می‌شود
           git push --force
