--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,13 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# مجوزهای صحیح و کامل برای اجرای تمام مراحل
+permissions:
+  contents: write
+
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
