--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -4,10 +4,13 @@ on:
   schedule:
     - cron: '0 */4 * * *'
 
+# مجوزهای صحیح و کامل برای اجرای تمام مراحل
+permissions:
+  contents: write
+
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
-      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
