--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -4,13 +4,10 @@ on:
   schedule:
     - cron: '0 */4 * * *'
 
-# مجوزهای صحیح و کامل برای اجرای تمام مراحل
-permissions:
-  contents: write
-
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,3 +36,6 @@ jobs:
         with:
           commit_message: "Update config files"
           file_pattern: "*.txt *.yaml"
+          # این دو خط برای حل مشکل نهایی اضافه شده‌اند
+          branch: main
+          push_options: --force
