--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -2,13 +2,16 @@ name: Scheduled Scrape
 
 on:
   schedule:
-    # این دستور هر ۴ ساعت یک بار اجرا می‌شود
     - cron: '0 */4 * * *'
+
+# مجوزهای کامل برای جلوگیری از هر نوع خطای دسترسی
+permissions:
+  contents: write
+  workflows: write
 
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
-      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
