--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,16 +35,12 @@ jobs:
 
       # بخش جدید: آپلود فایل‌ها در ابر آروان
       - name: Upload to ArvanCloud Object Storage
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --delete
         env:
-          AWS_S3_ENDPOINT: 'https://s3.ir-thr-at1.arvanstorage.com'
           AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
-          AWS_S3_BUCKET: 'v2v-data'
-          SOURCE_DIR: '.'
-          DEST_DIR: '/'
+        run: |
+          aws s3 cp configs.txt s3://v2v-data/configs.txt --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
+          aws s3 cp v2v_clash.yaml s3://v2v-data/v2v_clash.yaml --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
 
       - name: Commit and Push new configs to GitHub
         uses: stefanzweifel/git-auto-commit-action@v5
