--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,19 +33,26 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
 
-      # بخش جدید: آپلود فایل‌ها در ابر آروان
+      # بخش آپلود در ابر آروان (اصلاح شده)
       - name: Upload to ArvanCloud Object Storage
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
         run: |
+          # نصب aws-cli برای ارتباط با آروان
+          pip install awscli
+          # آپلود هر سه فایل خروجی
           aws s3 cp configs.txt s3://v2v-data/configs.txt --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
           aws s3 cp v2v_clash.yaml s3://v2v-data/v2v_clash.yaml --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
+          aws s3 cp configs.json s3://v2v-data/configs.json --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
 
+      # بخش کامیت و پوش در گیت‌هاب (اصلاح شده)
       - name: Commit and Push new configs to GitHub
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Update config files"
-          file_pattern: "*.txt *.yaml"
+          # فایل جیسان به پترن اضافه شد
+          file_pattern: "*.txt *.yaml *.json"
           branch: main
           push_options: --force
+
