--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -9,6 +9,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 120  # افزایش timeout به 2 ساعت
       
     steps:
       - name: Checkout repository
@@ -22,13 +23,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests # فقط نیازمندی‌های لازم نصب می‌شود
+          pip install requests
 
-      - name: Run final scraper script
+      - name: Run enhanced scraper script
         run: python scraper.py
         env:
-          # فقط Secretهایی که اسکریپت نهایی نیاز دارد باقی مانده‌اند
           GH_PAT: ${{ secrets.GH_PAT }}
+        timeout-minutes: 100  # timeout مخصوص scraper
           
       - name: Upload final JSON to ArvanCloud Object Storage
         env:
@@ -36,13 +37,11 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
         run: |
           pip install awscli
-          # فقط فایل خروجی نهایی آپلود می‌شود
           aws s3 cp all_live_configs.json s3://v2v-data/all_live_configs.json --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
 
       - name: Commit and Push the final JSON to GitHub
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📊 Update all_live_configs.json (Scheduled)"
-          # فقط فایل خروجی نهایی Commit می‌شود
+          commit_message: "📊 Update all_live_configs.json (Scheduled Enhanced)"
           file_pattern: "all_live_configs.json"
           branch: main
