--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-# === main.yml (نسخه نهایی و کامل) ===
 name: Scheduled Scrape
 
 on:
   schedule:
-    - cron: '0 */4 * * *' # هر ۴ ساعت یک بار اجرا می‌شود
+    - cron: '0 */4 * * *'
 
 jobs:
   build-and-commit:
