--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -42,8 +42,14 @@ jobs:
           aws s3 cp best_clash.yaml s3://v2v-data/best_clash.yaml --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
 
       - name: Commit and Push the final files to GitHub
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "📊 Update configs and auto-clash file"
-          file_pattern: "all_live_configs.json best_clash.yaml"
-          branch: main
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add all_live_configs.json best_clash.yaml
+          # فقط در صورتی کامیت کن که تغییری وجود داشته باشد
+          if git diff-index --quiet HEAD; then
+            echo "No changes to commit."
+          else
+            git commit -m "📊 Update configs and auto-clash file"
+            git push
+          fi
