--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -10,7 +10,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 10
       
     steps:
       - name: Checkout repository
@@ -22,33 +22,28 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests awscli PyYAML
+        run: pip install requests
 
-      - name: Run scraper script
+      - name: Run collector script
         run: python scraper.py
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        timeout-minutes: 15
           
-      - name: Upload files to ArvanCloud Object Storage
+      - name: Upload file to ArvanCloud
         continue-on-error: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_ACCESS_KEY_SECRET }}
         run: |
+          pip install awscli
           aws s3 cp all_live_configs.json s3://v2v-data/all_live_configs.json --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
-          aws s3 cp best_clash.yaml s3://v2v-data/best_clash.yaml --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
 
-      - name: Commit and Push the final files to GitHub
+      - name: Commit and Push the file to GitHub
         run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add all_live_configs.json best_clash.yaml
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add all_live_configs.json
           if git diff-index --quiet HEAD; then
             echo "No changes to commit."
           else
-            git commit -m "📊 Update configs and auto-clash file"
+            git commit -m "📊 Update raw configs"
             git push
           fi
