--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,17 +1,16 @@
 name: Scheduled Scrape
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '0 */4 * * *'
+    - cron: '0 * * * *' # At the top of every hour
   workflow_dispatch:
 
 jobs:
   build-and-commit:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,32 +21,24 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install requests PyYAML
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run collector script
-        run: python scraper.py
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
-        timeout-minutes: 15
-          
-      - name: Upload files to ArvanCloud
-        continue-on-error: true
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_ACCESS_KEY_SECRET }}
-        run: |
-          pip install awscli
-          aws s3 cp all_live_configs.json s3://v2v-data/all_live_configs.json --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
-          aws s3 cp best_clash.yaml s3://v2v-data/best_clash.yaml --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read
+        run: python scraper.py
 
-      - name: Commit and Push the final files to GitHub
+      - name: Commit and push if changes exist
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add all_live_configs.json best_clash.yaml
-          if git diff-index --quiet HEAD; then
+          git config --global user.name "SMBCRYP"
+          git config --global user.email "smbcryp@gmail.com"
+          git add -A
+          if git diff --staged --quiet; then
             echo "No changes to commit."
           else
-            git commit -m "📊 Update raw configs and auto-clash file"
+            git commit -m "Update configs"
             git push
           fi
+
