--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -39,6 +39,6 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "Update configs"
+            git pull --rebase  # <--- این خط اضافه شده است
             git push
           fi
-
